source-kafka/src/snapshots/source_kafka__discover__tests__no key.snap
---
source: src/discover.rs
expression: snap
---
["/_meta/partition","/_meta/offset"]
{
  "type": "object",
  "required": [
    "_meta"
  ],
  "properties": {
    "_meta": {
      "type": "object",
      "required": [
        "offset",
        "partition"
      ],
      "properties": {
        "offset": {
          "description": "The offset of the message within the partition",
          "type": "integer"
        },
        "partition": {
          "description": "The partition the message was read from",
          "type": "integer"
        },
        "topic": {
          "description": "The topic the message was read from",
          "type": "string"
        }
      }
    }
  },
  "x-infer-schema": true
}
