source-kafka/src/snapshots/source_kafka__discover__tests__single scalar json key.snap
---
source: src/discover.rs
expression: snap
---
["/_key"]
{
  "type": "object",
  "required": [
    "_key",
    "_meta"
  ],
  "properties": {
    "_key": {
      "type": "string"
    },
    "_meta": {
      "type": "object",
      "required": [
        "offset",
        "partition"
      ],
      "properties": {
        "offset": {
          "description": "The offset of the message within the partition",
          "type": "integer"
        },
        "partition": {
          "description": "The partition the message was read from",
          "type": "integer"
        },
        "topic": {
          "description": "The topic the message was read from",
          "type": "string"
        }
      }
    }
  },
  "x-infer-schema": true
}
